# mcp-composition-scanner

./: .gitignore  CITATION.md  LICENSE  README.md  mcp.json.example  paper-evaluation-section.md  pyproject.toml  run_evaluation.sh  run_scan.py  summarize_evaluation.py
examples/: composition-result-ServerRogueMCP2+pitchskin.json
results/evaluation/: 20260227-100356-COMPOSITION-postgres+sendgrid.json  20260227-100433-COMPOSITION-filesystem+fetch.json  20260227-100538-COMPOSITION-slack+github.json  20260227-100629-COMPOSITION-puppeteer+sendgrid.json  20260227-100716-COMPOSITION-kubernetes+bash-executo.json  20260227-100810-COMPOSITION-sqlite+gdrive.json  20260227-100902-COMPOSITION-desktop-comm+s3.json  20260227-100950-COMPOSITION-redis+puppeteer.json  20260227-101037-COMPOSITION-git+sendgrid.json  20260227-101131-COMPOSITION-memory+slack.json  20260227-101219-COMPOSITION-google-maps+memory.json  20260227-101247-COMPOSITION-fetch+google-maps.json  20260227-101338-COMPOSITION-postgres+sqlite.json  20260227-101437-COMPOSITION-postgres+desktop-comm+sendgrid.json  20260227-101602-COMPOSITION-puppeteer+redis+github.json  log-CTRL-1-google-maps+memory.txt  log-CTRL-2-fetch+google-maps.txt  log-CTRL-3-postgres+sqlite.txt  summary.json  (+12 more)
test-servers/: 20260227-120000-bash-executor.json  20260227-120000-desktop-commander.json  20260227-120000-fetch.json  20260227-120000-filesystem.json  20260227-120000-gdrive.json  20260227-120000-git.json  20260227-120000-github.json  20260227-120000-google-maps.json  20260227-120000-kubernetes.json  20260227-120000-memory.json  20260227-120000-postgres.json  20260227-120000-puppeteer.json  20260227-120000-redis.json  20260227-120000-s3.json  20260227-120000-sendgrid.json  20260227-120000-slack.json  20260227-120000-sqlite.json
(+6 files in other folders)
