[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-composition-scanner"
version = "0.1.0"
description = "Cross-server MCP capability composition risk scanner — detects emergent capabilities invisible to per-server review"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Philippe Bogaerts", email = "philippe.bogaerts@radarsec.com"},
]
keywords = ["mcp", "security", "agentic-ai", "composition", "tool-poisoning", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "fastmcp>=0.1.0",
    "openai-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mcp-composition-scanner"
Repository = "https://github.com/mcp-composition-scanner"
Issues = "https://github.com/mcp-composition-scanner/issues"

[project.scripts]
mcp-compose-scan = "mcp_composition_scanner.composition_analyser:main"
mcp-compose-server = "mcp_composition_scanner.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
